# FastAPI-template

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  dependency-update.yml  release.yml
app/: __init__.py  main.py
app/core/: config.py
tests/: test_main.py
